Closed Bug 530966 Opened 16 years ago Closed 16 years ago

New crash [@ nsDownloadScanner::~nsDownloadScanner()] in Firefox 3.6b3

Categories

(Toolkit :: Downloads API, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta5-fixed

People

(Reporter: jst, Assigned: timeless)

References

()

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

There's a new crash in Firefox 3.6b3 with the signature "nsDownloadScanner::~nsDownloadScanner()" that hasn't been seen in any of the versions 3\.5.*. So far we've seen 29+ of these crashes in the wild. Please see http://crash-stats.mozilla.com/query/query?product=Firefox&version=Firefox%3A3.6b3&range_value=1&range_unit=weeks&query_search=signature&query_type=exact&query=nsDownloadScanner%3A%3A%7EnsDownloadScanner%28%29&do_query=1 for more crash info.
Flags: blocking1.9.2?
source around the second frame in the stack changed during 3.6 development 7124d9e94924 2009-08-11 12:37 -0500 Jim Mathies - Bug 504804 - Virus scanning prefs cleanup and smarter integration with win policy settings. r=tellrob, r=sdwilsh.
Gents: accusation levied! Care to comment? :)
It seems very strange that a call to getService would cause a service to be released. I think mScanner is bogus so probably the nsDownloadManager is bogus?
I guess I'll take since I worked on it last.
Assignee: nobody → jmathies
no reports on this signature during aug, sept, and oct up until 10/23. 0-2 crashes per day between then and the release of beta 1 1 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091101 0 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091102 1 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091103 0 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091104 0 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091105 5 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091106 5 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091107 2 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091108 32 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091109 7 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091110 10 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091111 7 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091112 7 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091113 4 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091114 1 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091115 6 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091116 3 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091117 5 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091118 10 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091119 8 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091120 11 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091121 3 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091122 19 total crashes for nsDownloadScanner::~nsDownloadScanner on 20091123
111 nsDownloadManager::GetSingleton() 112 { 113 if (gDownloadManagerService) { 114 NS_ADDREF(gDownloadManagerService); 115 return gDownloadManagerService; 116 } 117 118 gDownloadManagerService = new nsDownloadManager(); 119 if (gDownloadManagerService) { 120 NS_ADDREF(gDownloadManagerService); 121 if (NS_FAILED(gDownloadManagerService->Init())) ^- you might want to ask why you went the wrong way here. 122 NS_RELEASE(gDownloadManagerService); ^- you are here. Signature nsDownloadScanner::~nsDownloadScanner() UUID 26fcee52-ce60-439d-a186-ecd832091124 Time 2009-11-24 09:27:41.864393 Uptime 12 Last Crash 53 seconds before submission Product Firefox Version 3.6b3 Build ID 20091115182845 Branch 1.9.2 OS Windows NT OS Version 5.1.2600 Service Pack 2 CPU x86 CPU Info GenuineIntel family 15 model 0 stepping 10 Crash Reason EXCEPTION_ACCESS_VIOLATION Crash Address 0xbc Crashing Thread Frame Module Signature [Expand] Source 0 xul.dll nsDownloadScanner::~nsDownloadScanner toolkit/components/downloads/src/nsDownloadScanner.cpp:189 1 xul.dll nsDownloadManager::~nsDownloadManager toolkit/components/downloads/src/nsDownloadManager.cpp:132 2 xul.dll nsDownloadManager::`vector deleting destructor' 3 xul.dll nsDownloadManager::Release toolkit/components/downloads/src/nsDownloadManager.cpp:106 4 xul.dll xul.dll@0x42bfb2 5 xul.dll nsDownloadManagerConstructor toolkit/components/build/nsToolkitCompsModule.cpp:86 6 xul.dll nsGenericFactory::CreateInstance obj-firefox/xpcom/build/nsGenericFactory.cpp:80 7 xul.dll nsComponentManagerImpl::CreateInstance xpcom/components/nsComponentManager.cpp:1597 8 xul.dll nsComponentManagerImpl::GetService xpcom/components/nsComponentManager.cpp:1901 9 xul.dll nsJSCID::GetService js/src/xpconnect/src/xpcjsid.cpp:894
Attached patch init earlySplinter Review
Assignee: jmathies → timeless
Status: NEW → ASSIGNED
Attachment #414472 - Flags: review?(sdwilsh)
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P1
Comment on attachment 414472 [details] [diff] [review] init early r=sdwilsh I should have caught this one in my original review of that change. sadfaces all around...
Attachment #414472 - Flags: review?(sdwilsh) → review+
er, happy faces! jst's new crash finder saved us before we shipped a new crash.
more eyeballs on the list at http://people.mozilla.com/~chofmann/crash-data/new-crashes/new-36b3-from-35x-as-of-20091122.html can help return the favor to others.
(In reply to comment #12) > same problem as this? certainly possible!
Whiteboard: [can land 1.9.2]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Crash Signature: [@ nsDownloadScanner::~nsDownloadScanner()]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: