Bug 530966 New crash [@ nsDownloadScanner::~nsDownloadScanner()] in Firefox 3.6b3 r=sdwilsh