toolkit/components/downloads/src/nsDownloadManager.h
@@ -91,6 +91,9 @@ public:
   nsDownloadManager() :
       mDBType(DATABASE_DISK)
     , mInPrivateBrowsing(PR_FALSE)
+#ifdef DOWNLOAD_SCANNER
+    , mScanner(nsnull)
+#endif
   {
   }
 
